<resources>
    <string name="app_name">ShoeStore</string>
    <string name="the_shoe_store">The Shoe Store</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Here you can find the current shoe inventory from The Shoe Store!</string>
    <string name="continue_button">Continue</string>
    <string name="instructions">Instructions:</string>
    <string name="instructions_description">There is a list of the current shoe list. By clicking on Add New Shoe button, user will be directed to a new screen to add the new shoe features.</string>
    <string name="new_shoe_name">Name:</string>
    <string name="shoe_name">Name: %s</string>
    <string name="new_company">Company:</string>
    <string name="new_shoe_size">Shoe size:</string>
    <string name="new_description">Description:</string>
</resources>
